2020-02-23  John Darrington <john@darrington.wattle.id.au>

	* src/pk-cmd.c (pk_cmd_exec_1)[case 'f']: Remove a lot
	of code which seems to serve no useful purpose.
	* src/pk-repl.c (escape_metacharacters): New function.
	* src/pk-repl.c (pk_repl): Initialize various readling
	parameters.

2020-02-27  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-lex.l: Set errno to 0 before calling strtoull.

2020-02-27  Jose E. Marchesi  <jemarch@gnu.org>

	* bootstrap.conf (gnulib_modules): Add module strtoull.
	* src/pkl-lex.l: Use strtoull instead of strtoll.
	* src/pkl-tab.y: Improve error message on integer overflow.

2020-02-27  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-tab.y (INTEGER_OVERFLOW): New token.
	(primary): Accept INTEGER_OVERFLOW as a primary.
	* src/pkl-lex.l: Return INTEGER_OVERFLOW whenever appropriate.
	* testsuite/poke.pkl/integers-diag-1.pk: New test.

2020-02-27  Jose E. Marchesi  <jemarch@gnu.org>

	* TODO: Update.

2020-02-26  Eric Blake  <eblake@redhat.com>

	open: Normalize tricky .file names.
	* src/ios-dev.h (struct ios_dev_if): Replace handler_p with
	handler_noramlize callback.
	* src/ios.c (ios_open): Store normalized name per ios.
	* src/ios-dev-file.c (ios_dev_file_handler_p): Rename...
	(ios_dev_file_handler_normalize): ...and prepend ./ to risky
	relative file names.
	* src/ios-dev-mem.c (ios_dev_mem_handler_p): Rename...
	(ios_dev_mem_handler_normalize): ...to this.
	(ios_dev_mem_open, ios_dev_mem_close): Drop unused handler member.
	* testsuite/poke.cmd/file-relative.pk: New test.

2020-02-26  Eric Blake  <eblake@redhat.com>

	* src/ios.c (ios_close): Avoid side-effect inside assert.
	* src/pk-def.c (print_var_decl, print_fun_decl): Likewise.
	* src/pk-term.c (pk_printf): Likewise.
	* src/pkl-asm.c (pkl_asm_call): Likewise.
	* src/pkl-tab.y (pkl_register_dummies): Likewise.
	* src/pkl.c (pkl_detailed_location): Likewise.

2020-02-26  Eric Blake  <eblake@redhat.com>

	* etc/git.orderfile (ChangeLog): Always list first.