@@ -3,6 +3,6 @@
 /* { dg-command { .file /etc/passwd } } */
 /* { dg-command { .file /dev/null } } */
 /* { dg-command { .info ios } } */
-/* { dg-output "  Id\tMode\tPosition\tName" } */
-/* { dg-output {\n. #1\trw\t0x00000000#b\t/dev/null} } */
-/* { dg-output {\n  #0\tr[w ]\t0x00000000#b\t/etc/passwd} } */
+/* { dg-output "  Id\tMode\tName" } */
+/* { dg-output {\n. #1\trw\t/dev/null} } */
+/* { dg-output {\n  #0\tr[w ]\t/etc/passwd} } */
